<resources>
    <string name="app_name">FaceApp</string>
    <string name="MainActivity_name">Register</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="home">Home</string>
    <string name="permissions">Permissions</string>
    <string name="register">Register</string>
    <string name="unknown_activity">UnknownActivites</string>
    <string name="EmergencyOpen">EmergencyOpen</string>
    <string name="LogOut">Logout</string>
    <string name="not_allowed">NA</string>
    <string name="allowed">A</string>
    <string name="todo">TODO</string>
    <string name="vehicles">Vehicles</string>
</resources>
